sorry, committed too much (CSS fixed)
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@8906 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -772,10 +772,6 @@ div.fieldset-menu li.active a {
 #login-widget input#login-u, #login-widget input#login-p {
     width: 8em;
 }
-#login-widget label, #login-widget label {
-    width: 8em;
-	display:block;
-}
 #loginmessage {
     width: 100%;
     padding: 1em 1em 1em 3em;
